# Proyecto-Final-Inventario-ALSE

./: README.md
InventarioLab/: CMakeLists.txt
InventarioLab/src/gui/: mainWindow.cpp  mainWindow.h  mainWindow.ui
InventarioLab/src/models/: Component.h  DatabaseManager.cpp  DatabaseManager.h  ReportGenerator.cpp  ReportGenerator.h  component.cpp  component.h  databaseManager.cpp  databaseManager.h  inventoryManager.cpp  inventoryManager.h  reportGenerator.cpp  reportGenerator.h
